fix: Luigi: targeting css color on mobile

--- a/EcomB2B/js/luigi_theme.css
+++ b/EcomB2B/js/luigi_theme.css
@@ -86,7 +86,7 @@
     line-height: 0px !important;
 }
 
-.luigi-ac-other-content {
+.luigi-ac-query .luigi-ac-other-content {
     color: #fff !important;
 }
 
